# rag-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/routes/: answer.py
app/schemas/: query.py  state.py
app/services/: rag_service.py
